--- a/Stylos.css
+++ b/Stylos.css
@@ -133,6 +133,12 @@ top: 250px;
 position: absolute;
 right: 100px;
 }
+
+.Dc{
+font-size: 50px;  
+  color: black;
+  font-family: 'Teko', sans-serif;
+}
 .C1{
 position: absolute;
 right: 400px;
