--- a/Stylos.css
+++ b/Stylos.css
@@ -135,9 +135,11 @@ right: 100px;
 }
 
 .Dc{
-font-size: 50px;  
+font-size: 20px;  
   color: black;
   font-family: 'Teko', sans-serif;
+top: 250px;
+position: absolute;
 }
 .C1{
 position: absolute;
