--- a/Stylos.css
+++ b/Stylos.css
@@ -141,6 +141,8 @@ font-size: 20px;
 top: 250px;
 position: absolute;
 text-align: justify;
+margin-left: 700px;
+margin-right: 40px;
 }
 .C1{
 position: absolute;
