--- a/Stylos.css
+++ b/Stylos.css
@@ -112,6 +112,8 @@ right: 300px;
 }
 .enfermedad{
  top: 260px;
+ height: 300px;
+ width: 250px;
   position: relative;
 
 
@@ -119,7 +121,7 @@ right: 300px;
 .tituloAE{
   font-family: 'Teko', sans-serif;
   font-size: 28px;
-  top: 230px;
+  top: 150px;
   position: relative;
   text-align: justify;
 
@@ -135,26 +137,26 @@ right: 100px;
 }
 
 .Dc{
-font-size: 20px;  
-  color: black;
-  font-family: 'Teko', sans-serif;
-top: 250px;
-position: absolute;
-text-align: justify;
-margin-left: 700px;
-margin-right: 40px;
-}
+  font-size: 25px;  
+    color: black;
+    font-family: 'Teko', sans-serif;
+  top: 350px;
+  position: absolute;
+  text-align: justify;
+  margin-left: 700px;
+  margin-right: 40px;
+  }
 .C1{
 position: absolute;
 right: 400px;
-top: 380px;
+top: 540px;
 }
 .Desc1{
   font-family: 'Teko', sans-serif;
 position: absolute;
 text-align: start;
-bottom: 5px;
-right:420px;
+bottom: -155px;
+right:400px;
 font-size: 'Teko', sans-serif;
 font-size: 30px;
 
@@ -162,78 +164,87 @@ font-size: 30px;
 .C2{
   position: absolute;
 right: 100px;
-top: 380px
+top: 540px;
 
 }
 .Desc2{
   font-family: 'Teko', sans-serif;
   position: absolute;
-  bottom: 5px;
+  bottom: -155px;
   right:100px;
   font-size: 30px;
   
 }
 @media screen and (max-width: 400px){
+.redes-container{
+  position: relative;
+  width: 100%;
+  left: 50px;
+  
+   
+}
+  .Dc{
+    font-size: 25px;  
+      color: black;
+      font-family: 'Teko', sans-serif;
+    position: absolute;
+    text-align: justify;
+    margin:40px;
+    top: 730px;
+  }
   .home{
    
     position: absolute;
-    top: 130px;
+    margin-top: 40px;
     left:100px;
     
   }
   .About{
     position: absolute;
-    top: 130px;
+    margin-top: 40px;
     left: 200px;
   }
   
-  .enfermedad{
-    position: absolute;
-    top:350px;
-   width: 50%;
-   height: 50%;
-
-  }
+ .enfermedad{
+width: 300px;
+height: 250px;
+position: absolute;
+ }
   .tituloAE{
-    position:absolute;
-    top: 470px;
+    position: absolute;
+    margin-top: 100px;
   }
   .hdiario{
     top: 160px;
     left: 5px;
   }
   .C2{
-    position: absolute;
-    top:700px;
+ position:absolute;
+ margin-top: 500px;
   }
   .Desc2{
     position: absolute;
-    top: 870px; 
+   margin-top: 550px;
+   margin-right: 25px;
   }
   .C1{
     position: absolute;
-    top: 1000px;
-    right: 130px;
+    margin-top:500px;
+    margin-right: -40px;
   }
   .Desc1{
     position: absolute;
-    left: 60px;
-    top: 1170px;
-    font-size: 30px;
+    margin-top:520px;
     width: 100%;
   }
 .Rd{
-  top:580px;
+ 
+  margin-top:100px;
+  
+  right: 60px;
   font-size: 40px;
 }
-.Dc{
-font-size: 20px;  
-  color: black;
-  font-family: 'Teko', sans-serif;
-top: 250px;
-position: absolute;
-text-align: justify;
-}
+
 .portada{
   position: absolute;
   right: 100px;
@@ -308,6 +319,7 @@ text-align: justify;
   top:580px;
   font-size: 40px;
 }
+
 .portada{
   position: absolute;
   right: 100px;
