--- a/Stylos.css
+++ b/Stylos.css
@@ -176,163 +176,128 @@ top: 540px;
   
 }
 @media screen and (max-width: 400px){
-.redes-container{
-  position: relative;
-  width: 100%;
-  left: 50px;
-  
-   
+  .redes-container{
+right: -20px;
+
+
+  }
+.home{
+    top: 100px;
+    position: absolute;
+    margin-left: 150px;
 }
-  .Dc{
-    font-size: 25px;  
-      color: black;
-      font-family: 'Teko', sans-serif;
-    position: absolute;
-    text-align: justify;
-    margin:40px;
-    top: 730px;
-  }
-  .home{
-   
-    position: absolute;
-    margin-top: 40px;
-    left:100px;
-    
-  }
-  .About{
-    position: absolute;
-    margin-top: 40px;
-    left: 200px;
-  }
-  
- .enfermedad{
-width: 300px;
-height: 250px;
+.About{
+font-size: 35px;
+color: black;
+font-family: 'Teko', sans-serif;
+text-decoration: none;
+top: 100px;
+margin-left: 180px;
 position: absolute;
- }
-  .tituloAE{
-    position: absolute;
-    margin-top: 100px;
-  }
-  .hdiario{
-    top: 160px;
-    left: 5px;
-  }
-  .C2{
- position:absolute;
- margin-top: 500px;
-  }
-  .Desc2{
-    position: absolute;
-   margin-top: 550px;
-   margin-right: 25px;
-  }
-  .C1{
-    position: absolute;
-    margin-top:500px;
-    margin-right: -40px;
-  }
-  .Desc1{
-    position: absolute;
-    margin-top:520px;
-    width: 100%;
-  }
-.Rd{
- 
-  margin-top:100px;
-  
-  right: 60px;
-  font-size: 40px;
+width: 100%;
 }
 
 .portada{
-  position: absolute;
-  right: 100px;
+	position: absolute;
+	margin-top: 50px;
+	margin-left: 560px;
+	
+
+}
+.cabeza{
+font-family: 'Teko', sans-serif;
+position: relative;
+  text-align: center;
+  font-size: 20px;
+top: 400px;
+
 }
 .Parrafo1{
-  font-size: 20px;
+	position: absolute;
+	top: 470px;
+font-family: 'Teko', sans-serif;
+text-align: justify;
+margin-right: 200px;
+margin-left:  200px;
+font-size: 25px;
+
+}
+.hdiario{
+  font-size: 50px;  
+  color: black;
+  font-family: 'Teko', sans-serif;
+top: 200px;
+text-align: center;
+position: absolute;
+left: 220px;
+
+
+}
+.enfermedad{
+ top: 350px;
+ left: 100px;
+ height: 200px;
+ width: 150px;
+  position: absolute;
+
+
+}
+.tituloAE{
+  font-family: 'Teko', sans-serif;
+  font-size: 28px;
+  top: 525px;
+  position: absolute;
+  text-align: justify;
+  left : 85px;
   width: 100%;
-  position: absolute;
-  left:-200px;
+
 }
+.Rd{
+
+  font-size: 50px;  
+  color: black;
+  font-family: 'Teko', sans-serif;
+  top: 600px;
+position: absolute;
+left: 100px;
+width: 100%;
 }
-@media screen and (max-width: 500px){
-  .redes-container{
-    position: relative;
-    width: 100%;
-    left: 50px;
-    
-     
-  }
-    .Dc{
-      font-size: 25px;  
-        color: black;
-        font-family: 'Teko', sans-serif;
-      position: absolute;
-      text-align: justify;
-      margin:40px;
-      top: 730px;
-    }
-    .home{
-     
-      position: absolute;
-      margin-top: 40px;
-      left:100px;
-      
-    }
-    .About{
-      position: absolute;
-      margin-top: 40px;
-      left: 200px;
-    }
-    
-   .enfermedad{
-  width: 300px;
-  height: 250px;
+
+
+.C1{
+position: absolute;
+left: 150px;
+top: 1000px;
+}
+.Desc1{
+top: 50px;
+font-family: 'Teko', sans-serif;
+position: absolute;
+color: black;
+
+}
+.C2{
   position: absolute;
-   }
-    .tituloAE{
-      position: absolute;
-      margin-top: 100px;
-    }
-    .hdiario{
-      top: 160px;
-      left: 5px;
-    }
-    .C2{
-   position:absolute;
-   margin-top: 500px;
-    }
-    .Desc2{
-      position: absolute;
-     margin-top: 550px;
-     margin-right: 25px;
-    }
-    .C1{
-      position: absolute;
-      margin-top:500px;
-      margin-right: -40px;
-    }
-    .Desc1{
-      position: absolute;
-      margin-top:520px;
-      width: 100%;
-    }
-  .Rd{
-   
-    margin-top:100px;
-    
-    right: 60px;
-    font-size: 40px;
-  }
+left: 150px;
+top: 1300px;
+
+}
+.Desc2{
+  font-family: 'Teko', sans-serif;
+  position: absolute;
+  top: 1500px;
+  left: 170px;
+  font-size: 30px;
+  width: 100%;
+}
+.Dc{
+text-align: justify;
+right: -90px;
+width: 100%;
+top: 700px;
+}
+
+}
+
+
   
-  .portada{
-    position: absolute;
-    right: 100px;
-  }
-  .Parrafo1{
-    font-size: 20px;
-    width: 100%;
-    position: absolute;
-    left:-200px;
-  }
