--- a/Stylos.css
+++ b/Stylos.css
@@ -299,5 +299,131 @@ top: 700px;
 
 }
 
+@media screen and ( max-width:  600px){
+  .redes-container{
+    right: -20px;
+    
+    
+      }
+    .home{
+        top: 100px;
+        position: absolute;
+        margin-left: 150px;
+    }
+    .About{
+    font-size: 35px;
+    color: black;
+    font-family: 'Teko', sans-serif;
+    text-decoration: none;
+    top: 100px;
+    margin-left: 180px;
+    position: absolute;
+    width: 100%;
+    }
+    
+    .portada{
+      position: absolute;
+      margin-top: 50px;
+      margin-left: 560px;
+      
+    
+    }
+    .cabeza{
+    font-family: 'Teko', sans-serif;
+    position: relative;
+      text-align: center;
+      font-size: 20px;
+    top: 400px;
+    
+    }
+    .Parrafo1{
+      position: absolute;
+      top: 470px;
+    font-family: 'Teko', sans-serif;
+    text-align: justify;
+    margin-right: 200px;
+    margin-left:  200px;
+    font-size: 25px;
+    
+    }
+    .hdiario{
+      font-size: 50px;  
+      color: black;
+      font-family: 'Teko', sans-serif;
+    top: 200px;
+    text-align: center;
+    position: absolute;
+    left: 220px;
+    
+    
+    }
+    .enfermedad{
+     top: 350px;
+     left: 100px;
+     height: 200px;
+     width: 150px;
+      position: absolute;
+    
+    
+    }
+    .tituloAE{
+      font-family: 'Teko', sans-serif;
+      font-size: 28px;
+      top: 525px;
+      position: absolute;
+      text-align: justify;
+      left : 85px;
+      width: 100%;
+    
+    }
+    .Rd{
+    
+      font-size: 50px;  
+      color: black;
+      font-family: 'Teko', sans-serif;
+      top: 600px;
+    position: absolute;
+    left: 100px;
+    width: 100%;
+    }
+    
+    
+    .C1{
+    position: absolute;
+    left: 150px;
+    top: 1000px;
+    }
+    .Desc1{
+    top: 1200px;
+    left: 150px;
+    font-family: 'Teko', sans-serif;
+    position: absolute;
+    color: black;
+    width: 100%;
+    }
+    .C2{
+      position: absolute;
+    left: 150px;
+    top: 1300px;
+    
+    }
+    .Desc2{
+      font-family: 'Teko', sans-serif;
+      position: absolute;
+      top: 1500px;
+      left: 170px;
+      font-size: 30px;
+      width: 100%;
+    }
+    .Dc{
+    text-align: justify;
+    right: -90px;
+    width: 100%;
+    top: 700px;
+    }
+
+}
+
+
 
   
